Make all fields in Motion Granted form optional

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p class="numbered-paragraph"><span class="paragraph-number">1.</span> The Petitioner (me) respectfully submits that the Respondent (you) works incredibly hard.</p>
                 <p class="numbered-paragraph"><span class="paragraph-number">2.</span> Evidence suggests that a brief recess involving food and conversation would serve the interests of justice and mental well-being.</p>
                 <p class="numbered-paragraph"><span class="paragraph-number">3.</span> The Petitioner further asserts that such recess would promote fairness, balance, and the general welfare of both parties involved.</p>
-                <p class="numbered-paragraph"><span class="paragraph-number">4.</span> WHEREFORE, the Petitioner prays for relief in the form of the Respondent's gracious company.</p>
+                <p class="numbered-paragraph"><span class="paragraph-number">4.</span> THEREFORE, the Petitioner prays for relief in the form of the Respondent's gracious company.</p>
             </div>
         </section>
 
