--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <span>IN THE COURT OF ROMANTIC APPEALS</span>
                 <div class="court-line"></div>
             </div>
-            <div class="case-number">CASE NO. 2026-DATE: MOTION TO PROCEED</div>
+            <div class="case-number">CASE NO- N/A 2026 Feb: MOTION TO PROCEED</div>
             <div class="filing-date">Filed: February 13, 2026</div>
             <h1 class="headline">
                 <span class="headline-text">IN RE: THE MATTER OF SATURDAY NIGHT</span>
