Update heading and statement to be less cringy

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <span>IN THE COURT OF ROMANTIC APPEALS</span>
                 <div class="court-line"></div>
             </div>
-            <div class="case-number">CASE NO- N/A 2026 Feb: MOTION TO PROCEED</div>
+            <div class="case-number">CASE NO- N/A: MOTION TO PROCEED</div>
             <div class="filing-date">Filed: February 13, 2026</div>
             <h1 class="headline">
-                <span class="headline-text">IN RE: THE MATTER OF SATURDAY NIGHT</span>
+                <span class="headline-text">IN RE: A REQUEST FOR YOUR COMPANY</span>
             </h1>
             <p class="subheadline">A Motion Submitted to the Honorable <span class="her-name">Ms. Sanghmitra</span>, in her Personal Capacity.</p>
             <div class="scroll-indicator">
@@ -54,7 +54,7 @@
             <div class="section-marker">EXHIBIT A</div>
             <h2><span class="section-icon">§</span> STATEMENT OF FACTS</h2>
             <div class="section-content">
-                <p class="numbered-paragraph"><span class="paragraph-number">1.</span> The Petitioner (me) respectfully submits that the Respondent (you) works incredibly hard.</p>
+                <p class="numbered-paragraph"><span class="paragraph-number">1.</span> The Petitioner respectfully submits that the Respondent deserves a well-earned break.</p>
                 <p class="numbered-paragraph"><span class="paragraph-number">2.</span> Evidence suggests that a brief recess involving food and conversation would serve the interests of justice and mental well-being.</p>
                 <p class="numbered-paragraph"><span class="paragraph-number">3.</span> The Petitioner further asserts that such recess would promote fairness, balance, and the general welfare of both parties involved.</p>
                 <p class="numbered-paragraph"><span class="paragraph-number">4.</span> THEREFORE, the Petitioner prays for relief in the form of the Respondent's gracious company.</p>
