Simplify paragraph content to be more standard

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <div class="section-marker">EXHIBIT A</div>
             <h2><span class="section-icon">§</span> STATEMENT OF FACTS</h2>
             <div class="section-content">
-                <p class="numbered-paragraph"><span class="paragraph-number">1.</span> The Petitioner respectfully submits that the Respondent deserves a well-earned break.</p>
-                <p class="numbered-paragraph"><span class="paragraph-number">2.</span> Evidence suggests that a brief recess involving food and conversation would serve the interests of justice and mental well-being.</p>
-                <p class="numbered-paragraph"><span class="paragraph-number">3.</span> The Petitioner further asserts that such recess would promote fairness, balance, and the general welfare of both parties involved.</p>
-                <p class="numbered-paragraph"><span class="paragraph-number">4.</span> THEREFORE, the Petitioner prays for relief in the form of the Respondent's gracious company.</p>
+                <p class="numbered-paragraph"><span class="paragraph-number">1.</span> The Petitioner respectfully requests the Respondent's consideration for an evening out.</p>
+                <p class="numbered-paragraph"><span class="paragraph-number">2.</span> The proposed arrangement involves dinner and conversation at a time convenient to the Respondent.</p>
+                <p class="numbered-paragraph"><span class="paragraph-number">3.</span> The Petitioner asserts that such arrangement would be mutually beneficial.</p>
+                <p class="numbered-paragraph"><span class="paragraph-number">4.</span> THEREFORE, the Petitioner respectfully seeks the Respondent's favorable response.</p>
             </div>
         </section>
 
@@ -70,9 +70,9 @@
             </div>
             <div class="section-content">
                 <div class="declaration-box">
-                    <p><strong>I.</strong> The Petitioner certifies that this invitation is extended strictly to the Respondent in her private, personal capacity.</p>
-                    <p><strong>II.</strong> Furthermore, the Petitioner affirms they have read and understood the 'Restatement of Values of Judicial Life' (NJA Paper Series 5) in its entirety.</p>
-                    <p><strong>III.</strong> This proposal strictly adheres to Canon 2 (Impartiality) and Canon 4 (Personal Conduct), ensuring no conflict of interest or impropriety.</p>
+                    <p><strong>I.</strong> This invitation is extended to the Respondent in her personal capacity.</p>
+                    <p><strong>II.</strong> The Petitioner has reviewed applicable guidelines and standards.</p>
+                    <p><strong>III.</strong> This proposal involves no conflict of interest or impropriety.</p>
                 </div>
                 <div class="certification-stamp">
                     <span>CERTIFIED COMPLIANT</span>
@@ -91,18 +91,18 @@
                 <div class="nda-terms">
                     <div class="nda-item">
                         <span class="nda-bullet">■</span>
-                        <p>Pursuant to the Respondent's need for professional discretion, the Petitioner agrees that the 'Incident of the Date' shall be <strong>SEALED</strong>.</p>
+                        <p>The Petitioner agrees to maintain complete discretion regarding this arrangement.</p>
                     </div>
                     <div class="nda-item">
                         <span class="nda-bullet">■</span>
-                        <p>No social media posts, no 'checking in,' and no public records shall be created.</p>
+                        <p>No social media posts or public documentation shall be created.</p>
                     </div>
                     <div class="nda-item">
                         <span class="nda-bullet">■</span>
-                        <p>The events of the evening are <strong>CLASSIFIED</strong>.</p>
+                        <p>All details shall remain <strong>CONFIDENTIAL</strong>.</p>
                     </div>
                 </div>
-                <p class="binding-notice">This agreement is binding and shall remain in effect in perpetuity.</p>
+                <p class="binding-notice">This agreement shall remain in effect.</p>
             </div>
         </section>
 
@@ -111,7 +111,7 @@
             <div class="section-marker">EXHIBIT D</div>
             <h2><span class="section-icon">⚡</span> VERIFICATION OF AUTHORITY</h2>
             <div class="section-content">
-                <p class="skill-check-caption">To unlock the RSVP buttons, please verify you are the one true Pen-Flicking Master.</p>
+                <p class="skill-check-caption">To unlock the response options, please complete the verification below.</p>
                 <div class="pen-stage">
                     <div class="pen-glow" id="pen-glow"></div>
                     <div class="pen-container">
