Make content more professional, change to Verification of Consent

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
         <section class="hero" id="preamble">
             <div class="court-header">
                 <div class="court-line"></div>
-                <span>IN THE COURT OF YOUR LADYSHIP</span>
+                <span>OFFICE OF THE PETITIONER</span>
                 <div class="court-line"></div>
             </div>
-            <div class="case-number">CASE NO- N/A: MOTION TO PROCEED</div>
-            <div class="filing-date">Filed: February 13, 2026</div>
+            <div class="case-number">REF: FORMAL INVITATION</div>
+            <div class="filing-date">Date: February 13, 2026</div>
             <h1 class="headline">
-                <span class="headline-text">IN RE: A REQUEST FOR YOUR COMPANY</span>
+                <span class="headline-text">INVITATION FOR DINNER</span>
             </h1>
-            <p class="subheadline">A Motion Submitted to the Honorable <span class="her-name">Ms. Sanghmitra</span>, in her Personal Capacity.</p>
+            <p class="subheadline">Addressed to <span class="her-name">Ms. Sanghmitra</span></p>
             <div class="scroll-indicator">
                 <span>Scroll to Review</span>
                 <div class="scroll-arrow"></div>
@@ -54,10 +54,10 @@
             <div class="section-marker">EXHIBIT A</div>
             <h2><span class="section-icon">§</span> STATEMENT OF FACTS</h2>
             <div class="section-content">
-                <p class="numbered-paragraph"><span class="paragraph-number">1.</span> The Petitioner respectfully requests the Respondent's consideration for an evening out.</p>
-                <p class="numbered-paragraph"><span class="paragraph-number">2.</span> The proposed arrangement involves dinner and conversation at a time convenient to the Respondent.</p>
-                <p class="numbered-paragraph"><span class="paragraph-number">3.</span> The Petitioner asserts that such arrangement would be mutually beneficial.</p>
-                <p class="numbered-paragraph"><span class="paragraph-number">4.</span> THEREFORE, the Petitioner respectfully seeks the Respondent's favorable response.</p>
+                <p class="numbered-paragraph"><span class="paragraph-number">1.</span> The undersigned respectfully requests your consideration for dinner.</p>
+                <p class="numbered-paragraph"><span class="paragraph-number">2.</span> The proposed meeting shall be at a time and place of your convenience.</p>
+                <p class="numbered-paragraph"><span class="paragraph-number">3.</span> This invitation is extended with sincere intent.</p>
+                <p class="numbered-paragraph"><span class="paragraph-number">4.</span> Your favorable consideration is respectfully requested.</p>
             </div>
         </section>
 
@@ -70,9 +70,9 @@
             </div>
             <div class="section-content">
                 <div class="declaration-box">
-                    <p><strong>I.</strong> This invitation is extended to the Respondent in her personal capacity.</p>
-                    <p><strong>II.</strong> The Petitioner has reviewed applicable guidelines and standards.</p>
-                    <p><strong>III.</strong> This proposal involves no conflict of interest or impropriety.</p>
+                    <p><strong>I.</strong> This invitation is extended in a personal capacity.</p>
+                    <p><strong>II.</strong> All applicable standards of conduct have been reviewed.</p>
+                    <p><strong>III.</strong> No conflict of interest exists.</p>
                 </div>
                 <div class="certification-stamp">
                     <span>CERTIFIED COMPLIANT</span>
@@ -86,32 +86,32 @@
             <div class="classified-banner">
                 <span>CLASSIFIED</span>
             </div>
-            <h2><span class="lock-icon">🔒</span> NON-DISCLOSURE AGREEMENT</h2>
+            <h2><span class="lock-icon">🔒</span> CONFIDENTIALITY CLAUSE</h2>
             <div class="section-content">
                 <div class="nda-terms">
                     <div class="nda-item">
                         <span class="nda-bullet">■</span>
-                        <p>The Petitioner agrees to maintain complete discretion regarding this arrangement.</p>
+                        <p>Complete discretion shall be maintained regarding this meeting.</p>
                     </div>
                     <div class="nda-item">
                         <span class="nda-bullet">■</span>
-                        <p>No social media posts or public documentation shall be created.</p>
+                        <p>No public documentation or social media posts shall be made.</p>
                     </div>
                     <div class="nda-item">
                         <span class="nda-bullet">■</span>
-                        <p>All details shall remain <strong>CONFIDENTIAL</strong>.</p>
+                        <p>All details shall remain strictly <strong>CONFIDENTIAL</strong>.</p>
                     </div>
                 </div>
-                <p class="binding-notice">This agreement shall remain in effect.</p>
+                <p class="binding-notice">These terms shall remain in effect.</p>
             </div>
         </section>
 
         <!-- Section E: Skill Check -->
         <section class="section-card skill-check-section fade-in-section" id="skill-check">
             <div class="section-marker">EXHIBIT D</div>
-            <h2><span class="section-icon">⚡</span> VERIFICATION OF AUTHORITY</h2>
+            <h2><span class="section-icon">⚡</span> VERIFICATION OF CONSENT</h2>
             <div class="section-content">
-                <p class="skill-check-caption">To unlock the response options, please complete the verification below.</p>
+                <p class="skill-check-caption">Please complete the verification to proceed.</p>
                 <div class="pen-stage">
                     <div class="pen-glow" id="pen-glow"></div>
                     <div class="pen-container">
